# PythonSimpleProjectTemplate

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
templates/: gitignore.txt
{{ cookiecutter.__project_slug }}/: .gitignore  polygon.ipynb  pyproject.toml
{{ cookiecutter.__project_slug }}/{{ cookiecutter.__project_slug }}/: __init__.py
